--- a/Calculator.html
+++ b/Calculator.html
@@ -3,11 +3,14 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport"
+        content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Games Project_Calculator</title>
     <link rel="shortcut icon" href="./Images/logo.png" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;1,700&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="./css/calculator.css">
+    <link rel="stylesheet" type="text/css" href="./css/calculator.css">
 </head>
 
 <body>
