--- a/Login.html
+++ b/Login.html
@@ -7,7 +7,7 @@
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>"Games Project_Login"</title>
-    <link rel="shortcut icon" href="./Images/logo.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./Images/logo.svg" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;1,700&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="./css/login.css">
@@ -23,7 +23,7 @@
                     </a>
                     <ul class="nav">
                         <li>
-                            <a class="nav__link-active" href="./index.html">About</a>
+                            <a href="./index.html">About</a>
                         </li>
                         <li>
                             <a href="Cards.html">Games</a>
@@ -32,7 +32,7 @@
                             <a href="Calculator.html">Calculator</a>
                         </li>
                         <li>
-                            <a href="./Login.html">Login</a>
+                            <a class="nav__link-active" href="./Login.html">Login</a>
                         </li>
                     </ul>
                 </nav>
