--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 </a>
                 <ul class="nav">
                     <li>
-                        <a class="nav__link-active" href="./About.html">About</a>
+                        <a class="nav__link-active" href="./index.html">About</a>
                     </li>
                     <li>
                         <a href="Cards.html">Games</a>
